# EvoloPy

./: CONTRIBUTING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
EvoloPy/: benchmarks.py
EvoloPy/benchmarks/: __init__.py  base.py  functions.py
EvoloPy/optimizers/: GA.py
examples/: enhanced_example.py
