[tool.poetry]
name = "evolopy"
version = "0.1.0"
description = "A Python library for evolutionary algorithms"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "EvoloPy"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3